style(menu@responsive):corrects overflow

--- a/css/menu.css
+++ b/css/menu.css
@@ -358,7 +358,7 @@ section {
   background: linear-gradient(175deg, #ff8de0 0%, #965add 100%);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 800px) {
   body main {
     display: grid;
     justify-content: center;
